--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #fff;
+    background-color: bisque;
 }
 
 .container {
@@ -16,8 +16,8 @@ body {
     display: flex;
     width: 80%;
     max-width: 1200px;
-    box-shadow:  4px 8px rgba(0,0,0,0.3);
-    background: #fff;
+    box-shadow:  4px 8px rgba(48, 3, 3, 0.3);
+    background: rgba(216, 196, 196, 0.3);
     border-radius: 10px;
     overflow: hidden;
 }
@@ -49,7 +49,7 @@ form {
 
 h2 {
     margin-bottom: 20px;
-    color: #333;
+    color: #000;
 }
 
 .form-group {
@@ -65,8 +65,7 @@ label {
 input[type="text"], input[type="email"], input[type="tel"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid  rgba(36, 36, 36, 1);
-;
+    border: 1px solid  rgb(207, 21, 21);
     border-radius: 5px;
     font-size: 16px;
 }
@@ -77,10 +76,8 @@ input[type="checkbox"] {
 
 button {
     padding: 15px;
-    background-color:  rgba(75, 114, 194, 1);
-;
-    color: rgba(36, 36, 36, 1);
-;
+    background-color:  rgb(68, 173, 168);
+    color: rgb(8, 1, 1);
     border: none;
     border-radius: 5px;
     font-size: 16px;
